<resources>
    <string name="app_name" translatable="false">FlyChecker</string>
    <string name="safe_for_takeoff">Safe for takeoff?</string>
    <string name="app_description">An app designed to check if the current weather is suitable for UAV takeoff.</string>
    <string name="app_author">George Papageorgiou</string>
    <string name="app_author_email" translatable="false">ice18390180@uniwa.gr</string>
    <string name="app_author_website" translatable="false"><a href="https://github.com/Georgegipa">Github.com</a></string>
    <string name="weather_api"><a href="https://open-meteo.com/">Weather data by Open-Meteo.com</a></string>
    <string name="icons_by"><a href="https://materialdesignicons.com/">Icons provided by MaterialDesignIcons</a></string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="website">Website</string>
    <string name="licenses">Code Licenses</string>
    <string name="weather_api_title">Weather API</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="app_settings">App Settings</string>
    <string name="theme">Theme</string>
    <string name="locale">Locale</string>
    <string name="switch_to_12h">Switch to 12h format</string>
    <string name="language">Language</string>
    <string name="wind_unit">Wind Unit</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="set_max_drone_speed">Max drone speed (m/s)</string>
    <string name="data_refreshed">Data refreshed!</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="auto">System Selected</string>
    <string name="time_format">Time Format</string>
    <string name="hr12">12-hour</string>
    <string name="hr24">24-hour</string>
    <string name="icons">Icons</string>
    <string name="safe">Safe</string>
    <string name="caution">Caution</string>
    <string name="danger">Danger</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="Gusts">Gusts</string>
    <string name="Wind">Wind</string>
    <string name="Precipitation">Precipitation</string>
    <string name="CloudCover">Cloudiness</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="no_internet">No internet connection</string>
<!--    app warnings and dangers-->
    <string name="low_temperature_caution">Low temperature detected</string>
    <string name="high_temperature_caution">High temperature detected</string>
    <string name="temperature_danger">Temperature out of the recommended operating range</string>
    <string name="precipitation_caution">Precipitation is low, but it is possible that it will rain soon</string>
    <string name="precipitation_danger">Precipitation is high, high risk of rain</string>
    <string name="humidity_caution">High humidity, try avoid flying in the current environment</string>
    <string name="cloud_cover_caution">Very cloudy weather, limited visibility and signal coverage may effect operations.</string>
    <string name="cloud_cover_danger">Cloudy weather may impact signal coverage and visibility.</string>
    <string name="gust_caution">High wind gusts detected!Drone control may be impacted negatively.</string>
    <string name="gust_danger">Current wind gusts may slow down drone speed and have a drastic impact on battery life.</string>
    <string name="waterproof">Waterproof</string>
    <string name="request_failed">Request Failed</string>
    <string name="gps_permission_denied">GPS Permission denied</string>
    <string name="gps_permission_denied_message">Please enable GPS and try again!</string>
    <string name="clear_sky">Clear sky</string>
    <string name="mainly_clear">Mainly clear</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="fog">Fog</string>
    <string name="freezing">Freezing</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="snow_fall">Snowfall</string>
    <string name="snow_grains">Snow grains</string>
    <string name="rain_showers">Rain showers</string>
    <string name="snow_showers">Snow showers</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="weather_light">light</string>
    <string name="weather_moderate">moderate</string>
    <string name="weather_heavy">heavy</string>
    <string name="unknown_weather">Unknown Weather Conditions</string>
    <string name="wind_caution">Wind speed may effect flight.</string>
    <string name="wind_danger">Wind speeds are too high, avoid flying if possible.</string>
    <string name="weather_summary">Weather Summary</string>
    <string name="location_from_cache">Loading last known location from cache!</string>
    <string name="using_cached_location">Using cached location</string>
    <string name="using_cur_location">Using your current location</string>
    <string name="last_update">Last Update:</string>
    <string name="coordinates">Coordinates:</string>
    <string name="now">Now</string>
    <string name="speed_to_low">Drone speed can\'t be lower than 3m/s!</string>
    <string name="retry">Retry</string>
    <string name="please_wait">Loading GPS position</string>
    <string name="gps_pref_summary">This will affect battery life and boot times!</string>
    <string name="gps_pref">Always load latest location</string>
</resources>