<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/app_settings" android:icon="@drawable/ic_baseline_settings_24">

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_entry_vals"
            android:icon="@drawable/ic_baseline_brush_24"
            android:key="pref_key_theme"
            android:summary="%s"
            android:title="@string/theme" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_gps_fixed_24"
            android:key="pref_key_gps"
            android:title="@string/gps_pref"
            android:summary="@string/gps_pref_summary"/>


    </PreferenceCategory>
    <PreferenceCategory android:title="@string/locale" android:icon="@drawable/ic_mdi_web">

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/hour_entries"
            android:entryValues="@array/hour_entries_vals"
            android:icon="@drawable/ic_mdi_clock"
            android:key="pref_key_hour_format"
            android:summary="%s"
            android:title="@string/time_format" />

        <ListPreference
            android:defaultValue="en"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_entries_vals"
            android:icon="@drawable/ic_baseline_translate_24"
            android:key="pref_key_language"
            android:summary="%s"
            android:title="@string/language" />

        <ListPreference
            android:defaultValue="m/s"
            android:entries="@array/wind_unit_entries"
            android:entryValues="@array/wind_unit_entries"
            android:icon="@drawable/ic_mdi_windsock"
            android:key="pref_key_wind_unit"
            android:summary="%s"
            android:title="@string/wind_unit" />

        <ListPreference
            android:defaultValue="°C"
            android:entries="@array/temperature_unit_entries"
            android:entryValues="@array/temperature_unit_entries"
            android:icon="@drawable/ic_baseline_device_thermostat_24"
            android:key="pref_key_temperature_unit"
            android:summary="%s"
            android:title="@string/temperature_unit" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Drone" app:icon="@drawable/ic_mdi_airplane_cog">

        <SeekBarPreference
            android:layout_width="match_parent"
            app:showSeekBarValue="true"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:icon="@drawable/ic_baseline_speed_24"
            android:key="pref_key_max_speed"
            android:defaultValue="15"
            android:max="75"
            android:min="5"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:title="@string/set_max_drone_speed" />

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_mdi_water_check"
            android:key="pref_key_waterproof"
            android:title="@string/waterproof" />


    </PreferenceCategory>

</PreferenceScreen>