<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--    create 4 rows-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:text="@string/app_name"
                        android:textSize="25dp" />

                    <TextView
                        android:id="@+id/tv_app_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_version"
                        android:text="@string/app_description"
                        android:textSize="15dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp">

                <!--        add 2 rows-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_about"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"

                            android:src="@drawable/ic_baseline_info_24" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:contentDescription="@string/app_name"
                                android:text="Version"
                                android:textSize="20dp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:id="@+id/tv_version_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:contentDescription="@string/app_name"
                                android:text="@string/app_version"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_person"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_baseline_person_24" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_dev"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:contentDescription="@string/app_name"
                                android:text="Author"
                                android:textSize="20dp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:id="@+id/tv_dev_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/app_author"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_website"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:src="@drawable/ic_baseline_web_24" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_website"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:contentDescription="@string/app_name"
                                android:text="Website"
                                android:textSize="20dp"
                                android:textStyle="normal|bold" />

                            <TextView
                                android:id="@+id/tv_website_url"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="left"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/app_author_website"
                                android:textSize="15dp" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>